# personal-intelligence-briefing

./: .gitignore  README.md  pyproject.toml
.github/workflows/: manual-run.yml  morning-briefing.yml  noon-briefing.yml  tests.yml
config/: event-retention-v1.yml  model-routing-v1.yml  report-selection-v1.yml  sources-discovery-v1.yml  sources-official-v1.yml
data/: active-events.json  permanent-identifiers.json  source-watermarks.json
data/events/: events-2026-07.jsonl
data/gpt-handoffs/: handoffs-2026-07.jsonl
data/runs/: run-morning-20260715T181302+0800.json  run-morning-20260715T184740+0800.json  run-morning-20260715T185147+0800.json  run-morning-20260716T015038+0800.json  run-morning-20260716T023221+0800.json  run-morning-20260716T071554+0800.json  run-morning-20260716T073438+0800.json  run-morning-20260717T071409+0800.json  run-morning-20260717T091351+0800.json  run-morning-20260718T071134+0800.json  run-morning-20260719T071408+0800.json  run-morning-20260720T071451+0800.json  run-morning-20260721T072701+0800.json  run-morning-20260722T071527+0800.json  run-morning-20260723T072640+0800.json  run-morning-20260724T071521+0800.json  run-noon-20260715T185016+0800.json  run-noon-20260716T073606+0800.json  (+10 more)
docs/: index.html
scripts/: build_public_pages.py
tests/: test_cli.py  test_collectors.py  test_config.py  test_fingerprints.py  test_gpt_review.py  test_llm.py  test_models.py  test_pipeline.py  test_public_pages.py  test_reporting.py  test_runtime.py  test_storage_and_deduplication.py  test_time_window.py  test_url_normalization.py  test_workflows.py
(+111 files in other folders)
