[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-intelligence-briefing"
version = "0.1.0"
description = "Stateful public-AI briefing candidate pipeline"
requires-python = ">=3.12"
dependencies = ["PyYAML>=6.0", "defusedxml>=0.7.1,<1"]

[project.optional-dependencies]
dev = ["pytest>=9.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
